plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.bwabwayo'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// [웹, 보안]
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// [Qdrant 연동을 위한 WebClient]
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// [DB]
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.retry:spring-retry'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// [QueryDSL]
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// [JWT]
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// [S3]
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// [문서화]
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

	// [DB 드라이버]
	runtimeOnly 'com.mysql:mysql-connector-j'

	// [개발 편의성]
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// [Lombok]
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// [테스트]
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'com.h2database:h2'

	// [openvidu]
	implementation 'io.openvidu:openvidu-java-client:2.29.0'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'

	// [JSON]
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

	// [텍스트 전처리]
	implementation 'org.apache.lucene:lucene-core:9.9.2'
	implementation 'org.apache.lucene:lucene-analysis-nori:9.9.2'
	implementation 'org.apache.lucene:lucene-analysis-common:9.9.2'
	implementation 'org.openkoreantext:open-korean-text:2.3.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
